--- a/pages/post.html
+++ b/pages/post.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
     <link rel="manifest" href="../favicon_io/site.webmanifest">
     <title>BlogSite</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 
 <body>
@@ -141,7 +141,7 @@
             </div>
             <hr>
             <div class="author--info">
-                <img src="../images/avatar.jpg" alt="avatar">
+                <img src="https://avatar.iran.liara.run/public" alt="avatar">
                 <div class="info--text">
                     <p>Arijeet Pandey</p>
                     <p>Lorem ipsum dolor sit amet consectetur.</p>
