--- a/index2.html
+++ b/index2.html
@@ -9,13 +9,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <link rel="manifest" href="favicon_io/site.webmanifest">
     <title>BlogSite</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
     <header class="header">
         <nav class="navbar container container--py">
-            <div class="logo">
+           <div class="logo">
                 <h1>BlogSite</h1>
             </div>
             <div class="links">
@@ -46,9 +46,9 @@
                 </div>
                 <div class="card--author">by Arijeet</div>
                 <div class="card-text">
-                    <h2>Trending Technologies</h2>
+                    <h2 style="color: rgb(56, 48, 216);">Trending Technologies</h2>
                     <p>Lorem ipsum dolor sit amet...</p>
-                    <a href="pages/post.html" class="button">Read Post</a>
+                    <a href="pages/post.html" class="button" style="animation: pulse-glow 2s infinite alternate;">Read Post</a>
                 </div>
             </div>
             <div class="card">
@@ -112,7 +112,7 @@
         <div class="footer--wrapper container container--py">
             <div class="footer--sub">
                 <div class="sub--input">
-                    <input type="email" name="email" placeholder="arijeetpandey@gmail.com">
+                    <input type="email" name="email" placeholder="XYZ123@gmail.com">
                     <button class="button"><a href="#">Subscribe</a></button>
                 </div>
             </div>
