--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h1>Welcome to BlogSite</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis incidunt at ex sunt obcaecati debitis
                     veritatis expedita corporis, nisi soluta.</p>
-                <a href="pages/post.html" class="button">Read Post</a>
+                <a href="pages/post.html" class="button btn-red btn-glow">Read Post</a>
             </div>
         </div>
     </section>
@@ -48,7 +48,7 @@
                 <div class="card-text">
                     <h2>Trending Technologies</h2>
                     <p>Lorem ipsum dolor sit amet...</p>
-                    <a href="pages/post.html" class="button">Read Post</a>
+                    <a href="pages/post.html" class="button btn-glow">Read Post</a>
                 </div>
             </div>
             <div class="card">
@@ -59,7 +59,7 @@
                 <div class="card-text">
                     <h2>Boost Your Productivity</h2>
                     <p>Lorem ipsum dolor sit amet...</p>
-                    <a href="pages/post.html" class="button">Read Post</a>
+                    <a href="pages/post.html" class="button btn-glow">Read Post</a>
                 </div>
             </div>
             <div class="card">
@@ -70,7 +70,7 @@
                 <div class="card-text">
                     <h2>How to Study Effectively</h2>
                     <p>Lorem ipsum dolor sit amet...</p>
-                    <a href="pages/post.html" class="button">Read Post</a>
+                    <a href="pages/post.html" class="button btn-glow">Read Post</a>
                 </div>
             </div>
             <div class="card">
@@ -81,7 +81,7 @@
                 <div class="card-text">
                     <h2>Build a Website</h2>
                     <p>Lorem ipsum dolor sit amet...</p>
-                    <a href="pages/post.html" class="button">Read Post</a>
+                    <a href="pages/post.html" class="button btn-glow">Read Post</a>
                 </div>
             </div>
             <div class="card">
@@ -92,7 +92,7 @@
                 <div class="card-text">
                     <h2>Front-End Basics</h2>
                     <p>Lorem ipsum dolor sit amet...</p>
-                    <a href="pages/post.html" class="button">Read Post</a>
+                    <a href="pages/post.html" class="button btn-glow">Read Post</a>
                 </div>
             </div>
             <div class="card">
@@ -103,7 +103,7 @@
                 <div class="card-text">
                     <h2>Front-End vs. Back-End</h2>
                     <p>Lorem ipsum dolor sit amet...</p>
-                    <a href="pages/post.html" class="button">Read Post</a>
+                    <a href="pages/post.html" class="button btn-glow">Read Post</a>
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@
             <div class="footer--sub">
                 <div class="sub--input">
                     <input type="email" name="email" placeholder="abc@email.com">
-                    <button class="button"><a href="#">Subscribe</a></button>
+                    <button class="button btn-glow"><a href="#">Subscribe</a></button>
                 </div>
             </div>
             <div class="footer--copyright">Copyright &copy; 2025 BlogSite</div>
