--- a/pages/post.html
+++ b/pages/post.html
@@ -163,7 +163,7 @@
             <div class="footer--sub">
                 <div class="sub--input">
                     <input type="email" name="email" placeholder="abc@email.com">
-                    <button class="button"><a href="#">Subscribe</a></button>
+                    <button class="button btn-glow"><a href="#">Subscribe</a></button>
                 </div>
             </div>
             <div class="footer--copyright">Copyright &copy; 2025 BlogSite</div>
